[package]
name = "html_extract_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1", features = ["full"] }
select = "0.6.0"
async-trait = "0.1.61"
async-std = "1.12.0"